@@ -4,6 +4,8 @@ aclocal.m4
 autom4te.cache/
 config.log
 config.status
+config.guess
+config.sub
 configure
 depcomp
 install-sh
