@@ -9,6 +9,7 @@ Bugs and ideas:
  * Julien Valroff <julien@kirya.net>
  * Iffan Arzanul Haq <arzanulhaq@gmail.com>
  * Thomas Koch <thomas@koch.ro>
+ * Rick Nekus <bsdsolarux@gmail.com>
 
 Packages:
  - Arch Linux:
