@@ -1,10 +1,10 @@
-.TH GSIMPLECAL 1 "2012-02-18"
+.TH GSIMPLECAL 1 "2012\-03\-26"
 .SH NAME
 gsimplecal \- lightweight calendar applet
 
 
 .SH SYNOPSIS
-.B gsimplecal [-h|--help|-v|--version|next_month|prev_month]
+.B gsimplecal [\-h|\-\-help|\-v|\-\-version|next_month|prev_month]
 
 
 .SH DESCRIPTION
@@ -27,11 +27,11 @@ See the \fICONFIGURATION\fP section to get to know how to.
 
 .SH COMMANDS AND OPTIONS
 .TP 5
-\fB-v, --version\fP
+\fB\-v, \-\-version\fP
 Print the program name and version to stdout, then exit with code 0.
 
 .TP 5
-\fB-h, --help\fP
+\fB\-h, \-\-help\fP
 Print the short usage help to stderr, then exit with error code 2.
 
 .TP 5
@@ -65,7 +65,7 @@ show_week_numbers = 0
 .br
 close_on_unfocus = 0
 .br
-external_viewer = sunbird -showdate "%Y-%m-%d"
+external_viewer = sunbird \-showdate "%Y\-%m\-%d"
 .br
 clock_format = %a %d %b %H:%M
 .br
