@@ -8,23 +8,17 @@
 #include <signal.h>
 
 #include "Unique.hpp"
-
-
-union semun
-{
-    int val;
-};
+#include "config.h"
 
 
 Unique::Unique()
 {
     // Get path to the current binary.
     // It's a bit ugly, I guess, to rely on /proc, but it'll do for now.
-    char szTmp[32];
-    sprintf(szTmp, "/proc/%d/exe", getpid());
-
+    // Also, /proc has different layout on Linux and BSD, so there is ugly
+    // conditional compilation in configure script.
     char* filename = new char[PATH_MAX + 1];
-    int bytes = readlink(szTmp, filename,
+    int bytes = readlink(PROC_SELF_PATH, filename,
                          sizeof(*filename) * PATH_MAX);
     if (bytes > PATH_MAX - 1) {
         bytes = PATH_MAX;
@@ -56,18 +50,16 @@ void Unique::start()
 {
     if (!isRunning()) {
         // Create semaphore; fail if already exists.
-        int semid = semget(semaphore_key, 1,
-                           IPC_CREAT | IPC_EXCL | 0660);
+        int semid = semget(semaphore_key, 1, IPC_CREAT | IPC_EXCL | 0660);
         if (semid == -1) {
             throw UniqueException("semget failed while creating semaphore");
         }
 
-        // Set initial semaphore value to the current pid, so we could use it to
-        // kill the process from the second instance.
-        union semun semopts;
-        semopts.val = getpid();
-        if (semctl(semid, 0, SETVAL, semopts) == -1) {
-            throw UniqueException("semctl (SETVAL) failed");
+        // Perform an operation on semaphore so that semctl(GETPID) returns
+        // current PID.
+        struct sembuf ops = {0, 1, 0};
+        if (semop(semid, &ops, 1) == -1) {
+            throw UniqueException("semop failed");
         }
     }
 }
@@ -90,9 +82,9 @@ void Unique::kill(int signal_id)
         }
 
         // Get the pid from semaphore value (stored before) to kill the process.
-        int pid = semctl(semid, 0, GETVAL, 0);
+        int pid = semctl(semid, 0, GETPID, 0);
         if (pid <= 0) {
-            throw UniqueException("semctl (GETVAL) failed");
+            throw UniqueException("semctl(GETPID) failed");
         }
         if (::kill(pid, signal_id)) {
             throw UniqueException("kill failed");
@@ -102,6 +94,7 @@ void Unique::kill(int signal_id)
 
 void Unique::stop()
 {
+    // Clean up semaphore, if exists.
     int semid = semget(semaphore_key, 1, 0660);
     if (semid != -1) {
         semctl(semid, 0, IPC_RMID, 0);
